--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-        <script src="script.js" defer type="module"></script>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <div id="header">
-            <h1 id="pageName"></h1>
-            <div id="head"></div>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <script src="script.js" defer type="module"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav id="navbar"></nav>
 
-        <div id="wrapper">
-            <div id="container"></div>
-            <div id="root"></div>
-        </div>
-    </body>
+    <div id="header">
+      <h1 id="pageName"></h1>
+      <div id="head"></div>
+    </div>
+
+    <div id="wrapper">
+      <div id="container"></div>
+      <div id="root"></div>
+    </div>
+  </body>
 </html>
